@@ -1,5 +1,6 @@
 == 0.1.1
 
+* Added specificity to selectors.
 * Fixed a bug where functions as pseudo classes didn't parse.
 
 == 0.1.0
